--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -9,8 +9,104 @@
 
   .login-container {
     width: 400px;
-    height: 100%;
-    margin: 0 auto;
-    border: red 1px solid;
+    border-radius: 10px;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 450px;
+    margin: auto;
+
+    .login-content {
+      padding: 10px;
+      .text-login {
+        text-align: center;
+        font-weight: 600;
+        font-size: 24px;
+        margin-top: 10px;
+      }
+      .password-input {
+        position: relative;
+        .login-input {
+          margin: 7px 0;
+          height: 40px;
+          ::placeholder {
+            color: teal;
+            font-weight: 500;
+          }
+        }
+        .eye {
+          position: absolute;
+          right: 7px;
+          top: 12px;
+          bottom: 0;
+          margin: auto;
+          font-size: 16px;
+          cursor: pointer;
+          color: gray;
+        }
+      }
+      .login-btn {
+        width: 100%;
+        border-radius: 100px;
+        padding: 8px 0px;
+        margin: 5px 0;
+        background: linear-gradient(
+          135deg,
+          rgba(34, 193, 195, 1) 0%,
+          rgba(253, 187, 45, 1) 100%
+        );
+        color: white;
+        font-weight: 300;
+        cursor: pointer;
+        border: none;
+        font-size: 18px;
+        &:hover {
+          background: linear-gradient(
+            135deg,
+            rgb(25, 164, 167) 0%,
+            rgb(230, 165, 24) 100%
+          );
+        }
+      }
+      .forgot-password {
+        margin: 10px 0;
+        color: blueviolet;
+        cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      .login-with {
+        text-align: center;
+        font-size: 18px;
+        font-style: italic;
+      }
+      .social-icons {
+        width: 100%;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
+        align-items: center;
+        i {
+          font-size: 24px;
+          width: 48px;
+          height: 48px;
+          border-radius: 50%;
+          cursor: pointer;
+          display: grid;
+          place-items: center;
+          color: white;
+        }
+        .google {
+          background: #c32424;
+        }
+        .facebook {
+          background: #0571e6;
+        }
+      }
+    }
   }
 }
