--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -65,12 +65,19 @@
         }
       }
       .flags {
+        display: flex;
+        gap: 5px;
         font-size: 16px;
-        font-weight: bold;
         color: grey;
         cursor: pointer;
-        &:hover {
-          text-decoration: underline;
+        span {
+          &:hover {
+            text-decoration: underline;
+          }
+          &.active {
+            color: red;
+            font-weight: bold;
+          }
         }
       }
     }
