--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -2,6 +2,9 @@
   height: 80px;
   width: 100%;
   padding: 0 20px;
+  position: fixed;
+  z-index: 100;
+  background: white;
 
   .home-header-content {
     display: flex;
