header change language, routing setup

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,23 +1,50 @@
-@import "../../styles/common.scss";
+@import '../../styles/common.scss';
 
 .header-container {
-    z-index: 99;
+  z-index: 99;
+  display: flex;
+  justify-content: space-between;
+  background-color: $colormain;
+  color: $common-text-color;
+  height: 40px;
+  position: relative;
+  .right {
     display: flex;
-    justify-content: space-between;
-    background-color: $colormain;
-    color: $common-text-color;
-    height: 40px;
-    position: relative;
-    .btn-logout {
-        color: $common-text-color;
-        line-height: 40px;
-        height: 40px;
-        padding: 0 10px;
+    align-items: center;
+    gap: 10px;
+
+    .languages {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      font-size: 16px;
+
+      span {
+        cursor: pointer;
+        opacity: 0.6;
+
         &:hover {
-            background-color: darken($colormain, 5);
+          opacity: 1;
         }
-        i {
-            font-size: $base-size + 1px;
+
+        &.active {
+          opacity: 1;
+          color: red;
         }
+      }
     }
+
+    .btn-logout {
+      color: $common-text-color;
+      line-height: 40px;
+      height: 40px;
+      padding: 0 10px;
+      &:hover {
+        background-color: darken($colormain, 5);
+      }
+      i {
+        font-size: $base-size + 1px;
+      }
+    }
+  }
 }
