--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -19,6 +19,10 @@
       align-items: center;
       font-size: 16px;
 
+      .welcome {
+        opacity: 1;
+      }
+
       span {
         cursor: pointer;
         opacity: 0.6;
