--- a/src/containers/System/Admin/UserRedux.scss
+++ b/src/containers/System/Admin/UserRedux.scss
@@ -11,6 +11,42 @@
       label {
         margin-bottom: 5px;
       }
+
+      .preview-image-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        input {
+          display: none !important;
+        }
+
+        label {
+          display: flex;
+          gap: 5px;
+          align-items: center;
+          width: fit-content;
+          height: calc(1.5em + 0.75rem + 2px);
+          padding: 0.375rem 0.75rem;
+          font-size: 1rem;
+          font-weight: 400;
+          border: 1px solid #ced4da;
+          border-radius: 0.25rem;
+          transition: border-color 0.15s ease-in-out,
+            box-shadow 0.15s ease-in-out;
+          color: slategrey;
+          cursor: pointer;
+
+          &:hover {
+            color: rgb(82, 98, 114);
+          }
+        }
+
+        .preview-image {
+          width: 100%;
+          height: 200px;
+        }
+      }
     }
 
     label {
