doctor detail page

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -49,6 +49,7 @@
           box-shadow: none;
           -webkit-box-shadow: none;
           margin: 0 !important;
+          cursor: pointer;
 
           &.padding {
             padding-right: 10px;
