doctor schedule react

--- a/src/containers/System/Admin/DoctorSchedule.scss
+++ b/src/containers/System/Admin/DoctorSchedule.scss
@@ -17,5 +17,10 @@
         border: 1px solid black;
       }
     }
+
+    .schedule-btn-active {
+      background-color: rgb(182, 182, 10);
+      color: white !important;
+    }
   }
 }
