--- a/src/containers/HomePage/Doctor/DoctorSchedule.scss
+++ b/src/containers/HomePage/Doctor/DoctorSchedule.scss
@@ -1,17 +1,62 @@
 .schedule-container {
   display: flex;
   margin: 30px 100px;
-  border: 1px solid red;
 
   .left {
-    width: 60%;
+    width: 70%;
     padding-right: 30px;
+
+    .left-title {
+      display: flex;
+      gap: 4px;
+      align-items: center;
+      margin: 10px 5px;
+      font-size: 16px;
+      font-weight: 600;
+
+      .icon {
+        font-size: 20px;
+        display: grid;
+        transform: scale(1.3);
+        place-items: center;
+      }
+
+      p {
+        margin: 0;
+      }
+    }
+
+    .left-content {
+      .schedule {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        .schedule-btn {
+          border: none;
+          outline: none;
+          background: #fff04b;
+          margin-top: 5px;
+          margin-bottom: 5px;
+          padding: 10px 15px;
+          font-weight: bolder;
+          min-width: 24%;
+          border: 1px solid transparent;
+          &:hover {
+            background-color: rgb(148, 7, 148);
+            color: white;
+          }
+        }
+      }
+    }
   }
 
   .right {
-    width: 40%;
+    width: 30%;
     padding-left: 15px;
     border-left: 1px solid rgb(212, 212, 212);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     .schedule-title {
       text-transform: uppercase;
