--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -68,9 +68,9 @@
             height: 160px;
             margin-bottom: 10px;
 
-            &.specialty-img {
-              background-image: url('../../assets/specialty/co-xuong-khop.jpg');
-            }
+            // &.specialty-img {
+            //   background-image: url('../../assets/specialty/co-xuong-khop.jpg');
+            // }
 
             &.facility-img {
               background-image: url('../../assets/facility/pham-ngoc-thach.jpg');
