specialty detail, loading doctor info

--- a/src/containers/HomePage/Doctor/DoctorDetail.scss
+++ b/src/containers/HomePage/Doctor/DoctorDetail.scss
@@ -5,14 +5,14 @@
     display: flex;
     margin: 0 100px;
 
-    .left {
+    .intro-left {
       width: 150px;
       height: 150px;
       border-radius: 50%;
       margin: 10px;
     }
 
-    .right {
+    .intro-right {
       width: 60%;
       display: flex;
       justify-content: center;
