--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -91,7 +91,7 @@
 .home-banner {
   position: relative;
   background: url('../../assets/images/banner.jpg');
-  height: calc(100vh - 80px);
+  height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   &:before {
@@ -112,12 +112,20 @@
       z-index: 15;
       display: flex;
       flex-direction: column;
-      padding-top: 80px;
+      padding-top: 130px;
       height: 50%;
+      background-image: linear-gradient(
+        rgba(255, 255, 255, 0.1),
+        rgba(255, 255, 255, 0.1)
+      );
       .title {
         h1 {
           color: white;
+          font-weight: 300;
         }
+      }
+      .bold {
+        font-weight: 500 !important;
       }
       .search {
         border: none;
@@ -146,7 +154,7 @@
       height: 50%;
       background-image: linear-gradient(
         rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 1)
+        rgba(255, 255, 255, 0.1)
       );
       .options {
         height: 100%;
