--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -57,6 +57,7 @@
 
           .customize-border {
             border: 1px solid gray;
+            min-height: 230px;
           }
 
           .img {
